Fix holiday days having the wrong font size

--- a/src/components/addUserModal/addUserModal.module.css
+++ b/src/components/addUserModal/addUserModal.module.css
@@ -103,7 +103,7 @@
     display: block;
 }
 
-.loginForm, .input[type="password"], .input[type="text"], input[type="submit"], input[type="date"], input[type="tel"], input[type="email"] {
+.loginForm, .input[type="password"], .input[type="text"], input[type="submit"], input[type="date"], input[type="tel"], input[type="email"], input[type="number"] {
     font-size: 24px;
 }
 
